--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Личный проект «Шесть городов» от HTML Academy",
   "scripts": {
     "eslint": "eslint --ext .jsx --ext .js src/",
-    "jest" : "npm run jest",
+    "jest": "npm run jest",
     "test": "npm run eslint && jest",
     "build": "webpack --mode production",
     "start": "webpack-dev-server"
@@ -16,6 +16,8 @@
     "@babel/preset-react": "7.10.1",
     "babel-jest": "26.1.0",
     "babel-loader": "8.1.0",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
     "eslint": "5.13.0",
     "eslint-config-htmlacademy": "0.5.2",
     "eslint-plugin-react": "7.20.0",
